--- a/Example/DaV_Consultorio_SDK.xcodeproj/xcshareddata/xcschemes/CocoaPods_Distribution.xcscheme
+++ b/Example/DaV_Consultorio_SDK.xcodeproj/xcshareddata/xcschemes/CocoaPods_Distribution.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "D543801C24E0E73C003C00E6"
                BuildableName = "CocoaPods_Distribution"
                BlueprintName = "CocoaPods_Distribution"
-               ReferencedContainer = "container:arch.xcodeproj">
+               ReferencedContainer = "container:DaV_Consultorio_SDK.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -53,7 +53,7 @@
             BlueprintIdentifier = "D543801C24E0E73C003C00E6"
             BuildableName = "CocoaPods_Distribution"
             BlueprintName = "CocoaPods_Distribution"
-            ReferencedContainer = "container:arch.xcodeproj">
+            ReferencedContainer = "container:DaV_Consultorio_SDK.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
